@@ -32,6 +32,7 @@ Changes that introduce incompatibilities:
 
 * chest:on_empty() is replaced by chest:on_opened(treasure) (#483).
 * Items with amount now have a default max amount of 1000 (#688).
+* Fix hero state name "freezed", renamed it to "frozen" (#813).
 * Fix map:get_entities() not returning the hero (#670).
 * Fix entity:set_enabled(true) delayed while it blocks the hero (#817).
 
